projects/vb6parse/snapshots/parsers/cst/declarations/erase/erase_after_redim.snap
---
source: projects/vb6parse/tests/declarations/erase.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ReDimStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ReDimKeyword
                  text: ReDim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: myArray
                - kind: LeftParenthesis
                  text: (
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "100"
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: EndOfLineComment
              text: "' Use the array"
            - kind: Newline
              text: "\n"
            - kind: EraseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: EraseKeyword
                  text: Erase
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: myArray
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
