projects/vb6parse/snapshots/parsers/cst/declarations/erase/erase_preserves_whitespace.snap
---
source: projects/vb6parse/tests/declarations/erase.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: EraseStatement
      children:
        - kind: EraseKeyword
          text: Erase
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: myArray
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
