projects/vb6parse/snapshots/parsers/cst/declarations/erase/erase_with_comment.snap
---
source: projects/vb6parse/tests/declarations/erase.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: EraseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: EraseKeyword
                  text: Erase
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: tempArray
                - kind: Whitespace
                  text: " "
                - kind: EndOfLineComment
                  text: "' Free up memory"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
